tests/snapshots/run_wpt_conformance__onnx_gruCell_float16_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gru_cell.https.any.js",
    "gruCell float16 tensors with all options",
    "onnx",
    "PASS",
)
