tests/snapshots/run_wpt_conformance__onnx_gru_float16_tensors_steps_1_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gru.https.any.js",
    "gru float16 tensors steps=1 all options",
    "onnx",
    "PASS",
)
