tests/snapshots/run_wpt_conformance__onnx_gru_float32_tensors_steps_2_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gru.https.any.js",
    "gru float32 tensors steps=2 with all options",
    "onnx",
    "PASS",
)
